Correction infra version mobile

--- a/assets/css/scripts.css
+++ b/assets/css/scripts.css
@@ -98,13 +98,13 @@
           display: flex;
           flex-direction: column;
           font-family: Arial, Helvetica, sans-serif; }
-          @media (max-width: 480px) {
-            .wrapper .right-box main .blog__content .blog__content__info {
-              padding: 0 0.4em 0 0.4em; } }
           .wrapper .right-box main .blog__content .blog__content__info .blog__content__info__items {
             height: 35px;
             display: flex;
             line-height: 0.5em; }
+            @media (max-width: 480px) {
+              .wrapper .right-box main .blog__content .blog__content__info .blog__content__info__items {
+                padding: 0 0.4em 0 0.4em; } }
           .wrapper .right-box main .blog__content .blog__content__info .blog__content__info__link {
             width: 100%;
             display: flex;
@@ -123,6 +123,9 @@
               border-bottom-right-radius: 0.5em; }
         .wrapper .right-box main .blog__content p {
           padding: 0.4em 0.4em 0.4em 0; }
+          @media (max-width: 480px) {
+            .wrapper .right-box main .blog__content p {
+              padding: 0 0.4em 0 0.4em; } }
         .wrapper .right-box main .blog__content img {
           width: 230px;
           height: 200px;
