--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -96,9 +96,7 @@
                     padding: 0.4em 0 0.4em 0;
                 }
                 .blog__content__info {
-                    @include xs {
-                        padding: 0 0.4em 0 0.4em;
-                    }
+
                     position: relative;
                     height: 200px;
                     display: flex;
@@ -106,6 +104,9 @@
                     font-family: Arial, Helvetica, sans-serif;
                    
                     .blog__content__info__items {
+                        @include xs {
+                            padding: 0 0.4em 0 0.4em;
+                        }
                         height: 35px;
                         display: flex;
                 
@@ -131,6 +132,9 @@
                     }
                 }
                 p {
+                    @include xs {
+                        padding: 0 0.4em 0 0.4em;
+                    }
                     padding: 0.4em 0.4em 0.4em 0;
                 }
                 img {
